# SmartNPCSimulator

./: .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  gridworld_test.cpp
auxiliary/: data_plotting.py  data_reader.py
config/: Data.yaml  FOMAP.yaml  GridWorld.yaml  SmartActor.yaml  StateValueEstimator.yaml
lib/: CMakeLists.txt
lib/common_includes/: bimap.h  data_writer.hpp  param_reader.hpp  unordered_bimap.h
lib/gui/: CMakeLists.txt
lib/gui/include/: gridworld_controller.hpp  gridworld_view.hpp
lib/gui/src/: gridworld_controller.cpp  gridworld_view.cpp
lib/rl/: CMakeLists.txt
lib/rl/include/: FOMAP.hpp  StateValueEstimator.hpp  cross_attention.hpp  self_attention.hpp  smart_actor.hpp
lib/rl/src/: FOMAP.cpp  StateValueEstimator.cpp  cross_attention.cpp  self_attention.cpp  smart_actor.cpp
lib/world/: CMakeLists.txt
lib/world/include/: abstract_action.hpp  abstract_actor.hpp  character.hpp  crafted_actor.hpp  element.hpp  gridworld.hpp  harvest_action.hpp  move_action.hpp  tile.hpp
lib/world/src/: character.cpp  crafted_actor.cpp  gridworld.cpp  tile.cpp
scripts/: collect_data.py  run_trial.sh
src/: CMakeLists.txt
src/gui/: CMakeLists.txt
src/gui/include/: gridworld_controller.hpp  gridworld_view.hpp
src/gui/src/: gridworld_controller.cpp  gridworld_view.cpp
src/world/include/: abstract_action.hpp  abstract_actor.hpp  character.hpp  element.hpp  gridworld.hpp  harvest_action.hpp  move_action.hpp  tile.hpp
src/world/src/: gridworld.cpp  tile.cpp
